WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
217536
[Mac] AirPlay menu does not show up when AirPlay button is clicked
https://bugs.webkit.org/show_bug.cgi?id=217536
Summary
[Mac] AirPlay menu does not show up when AirPlay button is clicked
Jer Noble
Reported
2020-10-09 14:16:43 PDT
[Mac] AirPlay menu does not show up when AirPlay button is clicked
Attachments
Patch
(4.12 KB, patch)
2020-10-09 14:19 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2020-10-09 14:17:44 PDT
<
rdar://problem/69973777
>
Jer Noble
Comment 2
2020-10-09 14:19:34 PDT
Created
attachment 410974
[details]
Patch
EWS
Comment 3
2020-10-09 21:37:29 PDT
Committed
r268308
: <
https://trac.webkit.org/changeset/268308
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 410974
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug